<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="16dp">


        <!-- Icono del banco -->
        <ImageView
            android:id="@+id/imageBankIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_bank"
            android:contentDescription="@string/icono_banco" />

        <!-- Contenedor de los textos -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textNumeroCuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/n_mero_de_cuenta" />

            <TextView
                android:id="@+id/textSaldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/saldo" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>