<com.google.android.material.textfield.TextInputLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:id="@+id/mainView"
    tools:context=".activities.LoginActivity"
    android:background="@drawable/fondo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/textViewTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_sesi_n"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- DNI -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:boxStrokeColor="@color/purple"
            app:boxStrokeWidth="2dp"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_dni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/introduce_el_usuario"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- contraseña -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxStrokeColor="@color/purple"
            app:boxStrokeWidth="2dp"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/introduce_la_contrase_a"
                android:inputType="textPassword"
                android:layout_marginBottom="60dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="12dp">

            <!-- iniciar sesión -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entrar"
                android:textColor="@color/white"
                android:layout_marginEnd="8dp"
                app:cornerRadius="8dp"
                app:backgroundTint="@color/purple"/>

            <!-- salir -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSalir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salir"
                android:textColor="@color/white"
                android:layout_marginStart="8dp"
                app:cornerRadius="8dp"
                app:backgroundTint="@color/purple"/>
        </LinearLayout>

    </LinearLayout>
</com.google.android.material.textfield.TextInputLayout>
